medium viewport layout issues updated

--- a/ReserviaStyle.css
+++ b/ReserviaStyle.css
@@ -374,10 +374,14 @@ aside h3, aside i {
     padding: 0.3em;
     display: grid;
     grid-template-columns: 3fr 4fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: minmax(0,1fr) minmax(0,1fr);
     background-color: white;
     border-radius: 1em;
     box-shadow: 1px 3px 15px 5px lightgrey;
+}
+
+.popcontainer p{
+    margin-top: 0.5rem;
 }
 
 .popimage {
@@ -394,7 +398,7 @@ aside h3, aside i {
 }
 
 .popcontainer .star-rating {
-    margin-top: 1.3em;
+    margin-top: 1em;
 }
 
 /* ASIDE HOTEL IMAGES */
@@ -494,12 +498,18 @@ footer {
 /* MEDIA QUERIES */ 
 
 @media all and (min-width:600px) {
+
+    body {
+        min-width: 700px;
+        margin: 0 auto;
+    }
+
     section#accomm, section#activ, footer {
         width: 70%;
         margin-left: 0;
     }
 
-@media all and (min-width:900px) {
+@media all and (min-width:1100px) {
     nav {
         display: flex;
         flex-flow: row nowrap;
